--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   provider_architecture: ^1.0.6
   get_it: ^4.0.1
   google_fonts: ^0.3.2
+  http: ^0.12.0+2
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
