--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   google_fonts: ^0.3.2
   http: ^0.12.0+2
   intl: ^0.16.1
+  flutter_auth0: ^0.5.0
+  url_launcher: ^5.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
