--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^4.0.4
   provider_architecture: ^1.0.6
   get_it: ^4.0.1
   google_fonts: ^0.3.2
